--- a/index.html
+++ b/index.html
@@ -8,39 +8,84 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <nav>
-        <div></div>
-
-    </nav>
     <header>
-        <!-- sezione 1 -->
-        <section>
-            <div id="box1"> </div>
-        </section>
+        <nav>
+            <div class="container-80 flex">
+                <img src="#" alt="Logo">
+                <ul>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                </ul>
+                <a href="#">Login</a>
+            </div>
+        </nav>
+        <section id="intro-discord">
+            <div class="intro-text container-80 h-400">
 
-        <!-- sezione 2 -->
-        <section>
-            <div id="box2"></div>
+            </div>
         </section>
-
-        <!-- sezione 3 -->
-        <section>
-            <div id="box3"></div>
-        </section>
-
-        <!-- sezione 4 -->
-        <section>
-            <div id="box4"></div>
-        </section>
-
-        <!-- sezione 5 -->
-        <section>
-            <div id="box5"></div>
-        </section>
-
     </header>
-    <footer>
+    <main>
+        <section id="1">
+            <div class="container-80 flex">
+                <div class="col-70 h-400 col-blue"></div>
+                <div class="col-30 h-400 col-pink"></div>
+            </div>
+        </section>
+        <section id="2" class="bg-gray">
+            <div class="container-80 flex">
+                <div class="col-70 h-400 col-blue order-2"></div>
+                <div class="col-30 h-400 col-pink order-1"></div>
+            </div>
+        </section>
+        <section id="3">
+            <div class="container-80 flex">
+                <div class="col-70 h-400 col-blue"></div>
+                <div class="col-30 h-400 col-pink"></div>
+            </div>
+        </section>
 
+        <section id="tecnologia-affidabile">
+            <div class="container-80 bg-green h-400">
+                
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <section id="footer-top" class="container-80 flex">
+            <div class="h-400">
+
+            </div>
+            <div class="h-400"></div>
+            <div class="h-400"></div>
+            <div class="h-400"></div>
+            <div class="h-400"></div>
+        
+        </section>
+
+        <hr class="container-80">
+
+        <section id="footer-social" class="flex container-80">
+            <a href="#">
+                <img src="" alt="Immagine discord">
+            </a>
+            <a href="#">Registrati</a>
+            <!-- <select name="" id="">
+                <option value="">Italiano</option>
+                <option value="">Inglese</option>
+            </select> -->
+        </section>
     </footer>
 </body>
 </html>
